# inventory

./: app.py  pyproject.toml  requirements.txt
keboola-config/: setup.sh
keboola-config/nginx/sites/: default.conf
keboola-config/supervisord/services/: app.conf
templates/: index.html
